--- a/스프링 배치 도메인 이해/src/main/resources/application.yml
+++ b/스프링 배치 도메인 이해/src/main/resources/application.yml
@@ -26,5 +26,7 @@ spring:
       password: 940215
       driver-class-name: com.mysql.cj.jdbc.Driver
   batch:
+    job:
+      enabled: false
     jdbc:
       initialize-schema: always
