--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 스프링 배치 멀티 스레드 프로세싱/spring_batch_multi_thread_processing/.mvn/wrapper/maven-wrapper.properties
 스프링 배치 멀티 스레드 프로세싱/spring_batch_multi_thread_processing/.mvn/wrapper/maven-wrapper.jar
 *.iml
+*.jar
+스프링 배치 이벤트 리스너/spring_batch_event_listener/.mvn/wrapper/maven-wrapper.jar
