--- a/스프링 배치 테스트 및 운영/spring_batch_test_and_operation/pom.xml
+++ b/스프링 배치 테스트 및 운영/spring_batch_test_and_operation/pom.xml
@@ -44,6 +44,11 @@
             <groupId>org.springframework.batch</groupId>
             <artifactId>spring-batch-integration</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
